--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,18 @@
                   headers: { 'x-make-apikey': 'b23f5a9d1e7a40a5c9d817d89e8d47f2' },
                   enable: true,
                 },
+                // Set to true to skip quiz and start at materials selection
+                testMode: true,
+                // Mock data for testing materials selection
+                testData: {
+                  selectedSpace: 'bathroom',
+                  participantName: 'Test User',
+                  finalStyle: {
+                    styleId: 'transitional',
+                    styleName: 'Transitional',
+                    description: 'Test transitional style description',
+                  }
+                }
               });
               console.log('buildQuiz called successfully');
             } catch (e) {
