Implement JSON-based question configuration: integrate global and general interior questions, enhance quiz flow with dynamic rendering, and improve maintainability through modularization. Update UI for better accessibility and user experience, including keyboard support for navigation and selection.

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
   <body style="background:#ffffff; font-family: 'Inter', sans-serif; padding: 3rem; margin: 0; min-height: 100vh;">
     <div id="idsq-root"></div>
 
+    <!-- Load question configuration files -->
+    <script src="../config/questions/design-specifics.js"></script>
+    <script src="../config/questions/general-interior.js"></script>
+    <script src="../config/questions/general-exterior.js"></script>
     <script src="./idsq-quiz.js"></script>
     <script>
       document.addEventListener('DOMContentLoaded', function () {
