Enhance design specifics questions: update descriptions for clarity, add selection prompts, and improve question structure. Introduce new options for existing questions and refine UI elements for better user experience. Update quiz initialization to support new space-specific questions and URL input handling.

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,9 @@
     <script src="../config/questions/design-specifics.js"></script>
     <script src="../config/questions/general-interior.js"></script>
     <script src="../config/questions/general-exterior.js"></script>
+    <script src="../config/questions/kitchen.js"></script>
+    <script src="../config/questions/living-room.js"></script>
+    <script src="../config/questions/bedroom.js"></script>
     <script src="./idsq-quiz.js"></script>
     <script>
       document.addEventListener('DOMContentLoaded', function () {
